--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="sidebar sticky">
             <div itemscope itemtype="http://schema.org/Person">
                 <div class="author__avatar">
-                    <img src="https://yu-ting-feng.github.io/images/profile.png" class="author__avatar" alt="FENG Yuting">
+                    <img src="https://yu-ting-feng.github.io/images/profile.jpg" class="author__avatar" alt="FENG Yuting">
                 </div>
                 <div class="author__content">
                     <h3 class="author__name">FENG Yuting</h3>
