--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
                         <li class="masthead__menu-item masthead__menu-item--lg">
                             <a href="https://yu-ting-feng.github.io/">FENG Yuting</a>
                         </li>
-                        <!--
+
                         <li class="masthead__menu-item">
-                            <a href="https://yu-ting-feng.github.io/publications/">Publications</a>
+                            <a href="https://yu-ting-feng.github.io/CV.html">CV</a>
                         </li>
+                        <!--
                         <li class="masthead__menu-item">
                             <a href="https://yu-ting-feng.github.io/talks/">Talks</a>
                         </li>
