--- a/CV.html
+++ b/CV.html
@@ -164,7 +164,7 @@
                 <section class="page__content" itemprop="text">
                     <h2 class="page__title" itemprop="headline">Education</h2>
                     <li>
-                        <h3>10/2019 - 01/2023  &nbsp
+                        <h3>10/2019 - 02/2023  &nbsp
                         Université Paris Saclay, France (Ph.D.)
                         </h3>
                         <p>
@@ -196,11 +196,67 @@
                         </h3>
                         <p>
                             Major: Traffic and Transportation Engineering <br>
-                            Coursework: Advanced Mathematics, Algebra, Complex Function, Programming (C++), Physics, Railway Line Design
                         </p>
                     </li>
 
 
+                <h2 id="a-data-driven-personal-website">Research Experience</h2>
+
+                    <li>
+                        <h3>
+                            Fairness at scale for Influence Maximization
+                        </h3>
+                        <p>
+                            Influence Maximization, diffusion cascades on social media, Equity fairness <br>
+                            Scalability of social graph representation learning <br>
+                        </p>
+                    </li>
+
+                    <li>
+                        <h3>
+                            Deep and Personalized Social-Aware News Recommendation
+                        </h3>
+                        <p>
+                            Diffusion and influence-aware user profiling, semantic embedding, attention mechanism for multi-source data fusion <br>
+                            Sequential analysis of user behavior, knowledge graph and pre-trained language model in news recommendation
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+                            Research on Risk Analysis and Early Warning Technology of High-Speed Railway Dispatching Command with China Railway Guangzhou Group
+                        </h3>
+                        <p>
+                            Design and development of database for the establishment of Railway Early Warning Predictive System <br>
+                            Platform integrated in TDMS for decision-making processes concerning train dispatching <br>
+                            Predictive analytics of train delays based on deep neural networks
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+                            Air Quality Monitoring Project with Laboratoire Génie des Procédés et Matériaux (LGPM)
+                        </h3>
+                        <p>
+                            Multi-disciplinary project involving circuit design, sensor integration,
+                            and 3-D printing of air quality monitoring device Real-time monitoring of air quality,
+                            with synchronized data transmission to self-developed android application
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+                            Degradation Monitoring of Historical Monuments through Image Analysis, Laboratoire Recherche Monuments Historiques (LRMH)
+                        </h3>
+                        <p>
+                            Analysis of images for the degeneration detection of cultural relics
+                        </p>
+                    </li>
+
+                    <h2 id="getting-started">Teaching Experience</h2>
+                    <ol>
+                        <li><b>École Polytechnique:</b> Introduction of Database</li>
+                        <li>
+                           <b>CentraleSupélec:</b> Algorithms and Programmation, Big Data Management, Big Data Algorithms and Techniques
+                        </li>
+                    </ol>
 
 
 
