--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> FENG Yuting</title>
     <meta property="og:locale" content="en-US">
     <meta property="og:site_name" content="FENG Yuting">
-    <meta property="og:title" content="academicpages is a ready-to-fork GitHub Pages template for academic personal websites">
+    <meta property="og:title" content="yuting-feng github io">
     <link rel="canonical" href="https://yu-ting-feng.github.io/">
     <meta property="og:url" content="https://yu-ting-feng.github.io/">
     <meta property="og:description" content="About me">
@@ -153,7 +153,7 @@
             </div>
         </div>
         <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
-            <meta itemprop="headline" content="academicpages is a ready-to-fork GitHub Pages template for academic personal websites">
+            <meta itemprop="headline" content="yuting-feng github.io">
             <meta itemprop="description" content="About me">
             <div class="page__inner-wrap">
                 <header>
