--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </p>
                     <p>
                         My research interests mainly related to recommender system, data mining, social networks and information diffusion.
-                        My research topics included but not limited to:
+                        My research topics include but not limited to:
                     </p>
                     <ul>
 
