--- a/CV.html
+++ b/CV.html
@@ -85,7 +85,7 @@
                         </li>
 
                         <li class="masthead__menu-item">
-                            <a href="https://yu-ting-feng.github.io/cv.html">CV</a>
+                            <a href="https://yu-ting-feng.github.io/CV.html">CV</a>
                         </li>
                         <!--
                         <li class="masthead__menu-item">
