--- a/CV.html
+++ b/CV.html
@@ -137,7 +137,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="test">
+                            <a href="https://scholar.google.com/citations?user=lfoikrwAAAAJ">
                                 <i class="fas fa-fw fa-graduation-cap"></i>
                                  Google Scholar
                             </a>
