--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="test">
+                            <a href="https://scholar.google.com/citations?user=lfoikrwAAAAJ">
                                 <i class="fas fa-fw fa-graduation-cap"></i>
                                  Google Scholar
                             </a>
@@ -170,7 +170,7 @@
                     </p>
                     <p>
                         My research interests mainly related to recommender system, data mining, social networks and information diffusion.
-                        My research topics include but not limited to:
+                        My research topics included but not limited to:
                     </p>
                     <ul>
 
